[package]
name = "rustsec-issues"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.clap]
version = "3"
default-features = false
features = ["cargo", "derive", "env", "std"]

# We use a modified version of `clap` that omits JWT-related dependencies.
[dependencies.hubcaps]
version = "0.6"
git = "https://github.com/olix0r/hubcaps.git"
branch = "ver/feature-jwt"

[dependencies.tokio]
version = "1"
features = ["rt", "macros", "process", "time"]
