[package]
name = "rustsecbot"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.clap]
version = "3"
default-features = false
features = ["cargo", "derive", "env", "std"]

# We use a modified version of `clap` that omits JWT-related dependencies.
[dependencies.hubcaps]
version = "0.6"
git = "https://github.com/softprops/hubcaps.git"
rev = "30bbb3a66bc85a062bab15bb10818395a387dcce"
default-features = false
features = ["default-tls"]

[dependencies.tokio]
version = "1"
features = ["fs", "rt", "macros", "process", "time"]
